--- a/Integrate RAG_with_Gemini.ipynb
+++ b/Integrate RAG_with_Gemini.ipynb
@@ -585,7 +585,7 @@
     "# load_dotenv()\n",
     "\n",
     "# api_key = os.getenv('GEMINI_API_KEY')\n",
-    "genai.configure(api_key='AIzaSyBKsViOraODxrrGBwOKXQwYeoXYH3WPcbM')"
+    "genai.configure(api_key='')"
    ]
   },
   {
